# synapse-plugin-web

./: .editorconfig  README.md  meson.build  package-lock.json  package.json
src/: Main.vala
